# minirenderer

./: CMakeLists.txt  README.md  load_model.cpp  main.cpp  rasterizer.cpp  texture.cpp
include/: geometry.h  load_model.hpp  matrix.h  r_math.h  rasterizer.hpp  shader.h  texture.hpp  vector.h
shaders/: brdf.frag  brdf.vert  deferred_lighting.frag  deferred_lighting.vert  equirect_to_cubemap.frag  forward_transparent.frag  forward_transparent.vert  gbuffer.frag  ground.frag  ground.vert  irradiance.frag  outline.frag  prefilter.frag  prefilter.vert  shadow_cube.frag  shadow_cube.geom  shadow_cube.vert  skybox.frag  skybox.vert
src/: Camera.cpp  Camera.h  Controller.cpp  Controller.h  Frustum.cpp  Frustum.h  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  SceneSerializer.cpp  SceneSerializer.h  Shader.cpp  Shader.h  main.cpp
